차트 색상 및 대시보드 레이아웃 일부 수정

--- a/packus/web/templates/dashboard.html
+++ b/packus/web/templates/dashboard.html
@@ -25,16 +25,22 @@
         <div class="row" id="memberCount">
           <div class="col-lg-3 col-md-3 col-sm-6">
             <div class="card card-stats">
-                <div class="card-body p-0 m-0" style="height: 300px;">
-                    <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/13f379a0-d568-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(filters:!(),linked:!f,query:(language:kuery,query:''),uiState:(),vis:(aggs:!((enabled:!t,id:'1',params:(customLabel:'%EC%B4%9D%20%ED%9A%8C%EC%9B%90%20%EC%88%98',field:n_memno),schema:metric,type:cardinality)),params:(addLegend:!f,addTooltip:!t,metric:(colorSchema:'Green%20to%20Red',colorsRange:!((from:0,to:10000)),invertColors:!f,labels:(show:!t),metricColorMode:None,percentageMode:!f,style:(bgColor:!f,bgFill:%23000,fontSize:32,labelColor:!f,subText:''),useRanges:!f),type:metric),title:'%5B%EC%A0%84%EC%B2%B4%5D%20%EC%B4%9D%20%ED%9A%8C%EC%9B%90%EC%88%98',type:metric))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
-                </div>
+              <div class="card-header border-bottom py-2">
+                <p class="m-0" style="font-size: 16px;">전체 회원 수(명)</p>
+              </div>
+              <div class="card-body p-0 m-0" style="height: 207px;">
+                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/6ba665d0-d84d-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
+              </div>
             </div>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-6">
             <div class="card card-stats">
-                <div class="card-body p-0 m-0" style="height: 300px;">
-                    <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/67825050-d568-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(filters:!(('$state':(store:appState),meta:(alias:!n,disabled:!f,index:ffee50a0-d2c5-11ea-83ec-578bbedbe7b6,key:totalgoodsprice,negate:!f,params:(gte:1,lt:!n),type:range),range:(totalgoodsprice:(gte:1,lt:!n)))),linked:!f,query:(language:kuery,query:''),uiState:(),vis:(aggs:!((enabled:!t,id:'1',params:(customLabel:'%EA%B5%AC%EB%A7%A4%EC%9D%B4%EB%A0%A5%20%E6%9C%89%20%ED%9A%8C%EC%9B%90',field:n_memno),schema:metric,type:cardinality)),params:(addLegend:!f,addTooltip:!t,metric:(colorSchema:'Green%20to%20Red',colorsRange:!((from:0,to:10000)),invertColors:!f,labels:(show:!t),metricColorMode:None,percentageMode:!f,style:(bgColor:!f,bgFill:%23000,fontSize:32,labelColor:!f,subText:''),useRanges:!f),type:metric),title:'%5B%EC%A0%84%EC%B2%B4%5D%20%EA%B5%AC%EB%A7%A4%EC%9D%B4%EB%A0%A5%20%E6%9C%89%20%ED%9A%8C%EC%9B%90',type:metric))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
-                </div>
+              <div class="card-header border-bottom py-2">
+                <p class="m-0" style="font-size: 16px;">구매이력이 있는 회원 수(명)</p>
+              </div>
+              <div class="card-body p-0 m-0" style="height: 207px;">
+                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/e4db1dd0-d850-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
+              </div>
             </div>
           </div>
         </div>
