--- a/packus/web/templates/model.html
+++ b/packus/web/templates/model.html
@@ -25,37 +25,49 @@
           <div class="row">
               <div class="col-lg-3 col-md-3 col-sm-6">
                 <div class="card card-stats">
-                    <div class="card-body p-0 m-0" style="height: 300px;">
-                        <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/0ad1eb60-d3cc-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(filters:!(),linked:!f,query:(language:kuery,query:''),uiState:(),vis:(aggs:!((enabled:!t,id:'1',params:(customLabel:'(%EB%AA%85)',field:n_memno,json:'%7B%22precision_threshold%22:%2040000%7D'),schema:metric,type:cardinality)),params:(addLegend:!f,addTooltip:!t,metric:(colorSchema:'Green%20to%20Red',colorsRange:!((from:0,to:10000)),invertColors:!f,labels:(show:!t),metricColorMode:None,percentageMode:!f,style:(bgColor:!f,bgFill:%23000,fontSize:32,labelColor:!f,subText:''),useRanges:!f),type:metric),title:'%5BRFM%5D%20%EA%B3%A0%EA%B0%9D%EA%B5%B0%20-%20%ED%9A%8C%EC%9B%90%EC%88%98',type:metric))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
-                    </div>
+                  <div class="card-header border-bottom py-2">
+                    <p class="m-0" style="font-size: 16px;">전체 회원 수(명)</p>
+                  </div>
+                  <div class="card-body p-0 m-0" style="height: 207px;">
+                    <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/8d795b40-d852-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-5y%2Fy%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
+                  </div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-6">
                 <div class="card card-stats">
-                    <div class="card-body p-0 m-0" style="height: 300px;">
-                        <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/355edd20-d3cc-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(filters:!(),linked:!f,query:(language:kuery,query:''),uiState:(),vis:(aggs:!((enabled:!t,id:'1',params:(customLabel:'(avg.%201%EC%9D%B8%2F%EC%9D%BC)',field:recency),schema:metric,type:avg)),params:(addLegend:!f,addTooltip:!t,metric:(colorSchema:'Green%20to%20Red',colorsRange:!((from:0,to:10000)),invertColors:!f,labels:(show:!t),metricColorMode:None,percentageMode:!f,style:(bgColor:!f,bgFill:%23000,fontSize:32,labelColor:!f,subText:''),useRanges:!f),type:metric),title:'%5BRFM%5D%20%EA%B3%A0%EA%B0%9D%EA%B5%B0%20-%20Recency',type:metric))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
-                    </div>
+                  <div class="card-header border-bottom py-2">
+                    <p class="m-0" style="font-size: 16px;">(avg. 1인/일)</p>
+                  </div>
+                  <div class="card-body p-0 m-0" style="height: 207px;">
+                    <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/b1dfbf10-d852-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-5y%2Fy%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
+                  </div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-6">
                 <div class="card card-stats">
-                    <div class="card-body p-0 m-0" style="height: 300px;">
-                        <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/47ececc0-d3cc-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(filters:!(),linked:!f,query:(language:kuery,query:''),uiState:(),vis:(aggs:!((enabled:!t,id:'1',params:(customLabel:'(avg.%201%EC%9D%B8%2F%EA%B1%B4)',field:frequency),schema:metric,type:avg)),params:(addLegend:!f,addTooltip:!t,metric:(colorSchema:'Green%20to%20Red',colorsRange:!((from:0,to:10000)),invertColors:!f,labels:(show:!t),metricColorMode:None,percentageMode:!f,style:(bgColor:!f,bgFill:%23000,fontSize:32,labelColor:!f,subText:''),useRanges:!f),type:metric),title:'%5BRFM%5D%20%EA%B3%A0%EA%B0%9D%EA%B5%B0%20-%20Frequency',type:metric))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
-                    </div>
+                  <div class="card-header border-bottom py-2">
+                    <p class="m-0" style="font-size: 16px;">(avg. 1인/건)</p>
+                  </div>
+                  <div class="card-body p-0 m-0" style="height: 207px;">
+                    <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/c1207870-d852-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-5y%2Fy%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
+                  </div>
                 </div>
               </div>
-              <div class="col-lg-3 col-md-3 col-sm-6">
+              <div class="col-lg-3 col-md-3 col-sm-6">       
                 <div class="card card-stats">
-                    <div class="card-body p-0 m-0" style="height: 300px;">
-                        <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/visualize/edit/5ca4ba30-d3cc-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(filters:!(),linked:!f,query:(language:kuery,query:''),uiState:(),vis:(aggs:!((enabled:!t,id:'1',params:(customLabel:'(avg.%201%EC%9D%B8%2F%EB%A7%8C%EC%9B%90)',field:monetary2),schema:metric,type:avg)),params:(addLegend:!f,addTooltip:!t,metric:(colorSchema:'Green%20to%20Red',colorsRange:!((from:0,to:10000)),invertColors:!f,labels:(show:!t),metricColorMode:None,percentageMode:!f,style:(bgColor:!f,bgFill:%23000,fontSize:32,labelColor:!f,subText:''),useRanges:!f),type:metric),title:'%5BRFM%5D%20%EA%B3%A0%EA%B0%9D%EA%B5%B0%20-%20Monetary',type:metric))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
-                    </div>
+                  <div class="card-header border-bottom py-2">
+                    <p class="m-0" style="font-size: 16px;">(avg. 1인/만원)</p>
+                  </div>
+                  <div class="card-body p-0 m-0" style="height: 207px;">
+                    <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/f4312200-d852-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-5y%2Fy%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
+                  </div>
                 </div>
               </div>
           </div>
         <div class="row">
           <div class="col-md-12">
             <div class="card">
-              <iframe frameborder="0" src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/5d9994a0-d2d3-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(description:'',filters:!(),fullScreenMode:!f,options:(hidePanelTitles:!f,useMargins:!t),query:(language:kuery,query:''),timeRestore:!t,title:'%5B%ED%8C%A8%EC%BB%A4%EC%8A%A4%20RFM%20%EB%AA%A8%EB%8D%B8%5D',viewMode:view)" height="850" width="100%"></iframe>
+              <iframe frameborder="0" src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/5d9994a0-d2d3-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(description:'',filters:!(),fullScreenMode:!f,options:(hidePanelTitles:!f,useMargins:!t),query:(language:kuery,query:''),timeRestore:!t,title:'%5B%ED%8C%A8%EC%BB%A4%EC%8A%A4%20RFM%20%EB%AA%A8%EB%8D%B8%5D',viewMode:view)" height="2950" width="100%"></iframe>
             </div>
           </div>
         </div>
