--- a/packus/web/templates/model.html
+++ b/packus/web/templates/model.html
@@ -67,7 +67,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="card">
-              <iframe frameborder="0" src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/5d9994a0-d2d3-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(description:'',filters:!(),fullScreenMode:!f,options:(hidePanelTitles:!f,useMargins:!t),query:(language:kuery,query:''),timeRestore:!t,title:'%5B%ED%8C%A8%EC%BB%A4%EC%8A%A4%20RFM%20%EB%AA%A8%EB%8D%B8%5D',viewMode:view)" height="2950" width="100%"></iframe>
+              <iframe frameborder="0" src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/5d9994a0-d2d3-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters:!(),refreshInterval:(pause:!t,value:0),time:(from:now-5y%2Fy,to:now))&_a=(description:'',filters:!(),fullScreenMode:!f,options:(hidePanelTitles:!f,useMargins:!t),query:(language:kuery,query:''),timeRestore:!t,title:'%5B%ED%8C%A8%EC%BB%A4%EC%8A%A4%20RFM%20%EB%AA%A8%EB%8D%B8%5D',viewMode:view)" height="2990" width="100%" style="border-radius: .8rem;"></iframe>
             </div>
           </div>
         </div>
