회원 수 card 내부 add filter 제거

--- a/packus/web/templates/dashboard.html
+++ b/packus/web/templates/dashboard.html
@@ -25,20 +25,20 @@
         <div class="row" id="memberCount">
           <div class="col-lg-3 col-md-3 col-sm-6">
             <div class="card card-stats">
-              <div class="card-header border-bottom py-2">
-                <p class="m-0" style="font-size: 16px;">전체 회원 수(명)</p>
+              <div class="card-header border-bottom py-2 countCardHeader">
+                <p class="m-0" style="font-size: 16px;">전체 회원 수</p>
               </div>
-              <div class="card-body p-0 m-0" style="height: 207px;">
-                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/6ba665d0-d84d-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
+              <div class="card-body p-0 m-0 countCardBody">
+                <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/6ba665d0-d84d-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;" id="allMember"></iframe>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-6">
             <div class="card card-stats">
-              <div class="card-header border-bottom py-2">
-                <p class="m-0" style="font-size: 16px;">구매이력이 있는 회원 수(명)</p>
+              <div class="card-header border-bottom py-2 countCardHeader">
+                <p class="m-0" style="font-size: 16px;">구매이력이 있는 회원 수</p>
               </div>
-              <div class="card-body p-0 m-0" style="height: 207px;">
+              <div class="card-body p-0 m-0 countCardBody">
                 <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/e4db1dd0-d850-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-15m%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
               </div>
             </div>
