--- a/packus/web/templates/model.html
+++ b/packus/web/templates/model.html
@@ -25,40 +25,40 @@
           <div class="row">
               <div class="col-lg-3 col-md-3 col-sm-6">
                 <div class="card card-stats">
-                  <div class="card-header border-bottom py-2">
-                    <p class="m-0" style="font-size: 16px;">전체 회원 수(명)</p>
+                  <div class="card-header border-bottom py-2 countCardHeader">
+                    <p class="m-0" style="font-size: 16px;">전체 회원 수</p>
                   </div>
-                  <div class="card-body p-0 m-0" style="height: 207px;">
+                  <div class="card-body p-0 m-0 countCardBody">
                     <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/8d795b40-d852-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-5y%2Fy%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
                   </div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-6">
                 <div class="card card-stats">
-                  <div class="card-header border-bottom py-2">
-                    <p class="m-0" style="font-size: 16px;">(avg. 1인/일)</p>
+                  <div class="card-header border-bottom py-2 countCardHeader">
+                    <p class="m-0" style="font-size: 16px;">평균 구매 일</p>
                   </div>
-                  <div class="card-body p-0 m-0" style="height: 207px;">
+                  <div class="card-body p-0 m-0 countCardBody">
                     <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/b1dfbf10-d852-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-5y%2Fy%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
                   </div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-6">
                 <div class="card card-stats">
-                  <div class="card-header border-bottom py-2">
-                    <p class="m-0" style="font-size: 16px;">(avg. 1인/건)</p>
+                  <div class="card-header border-bottom py-2 countCardHeader">
+                    <p class="m-0" style="font-size: 16px;">평균 구매 횟수</p>
                   </div>
-                  <div class="card-body p-0 m-0" style="height: 207px;">
+                  <div class="card-body p-0 m-0 countCardBody">
                     <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/c1207870-d852-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-5y%2Fy%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
                   </div>
                 </div>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-6">       
                 <div class="card card-stats">
-                  <div class="card-header border-bottom py-2">
-                    <p class="m-0" style="font-size: 16px;">(avg. 1인/만원)</p>
+                  <div class="card-header border-bottom py-2 countCardHeader">
+                    <p class="m-0" style="font-size: 16px;">평균 구매 지출액</p>
                   </div>
-                  <div class="card-body p-0 m-0" style="height: 207px;">
+                  <div class="card-body p-0 m-0 countCardBody">
                     <iframe src="http://52.78.186.240:8011/s/packus/app/kibana#/dashboard/f4312200-d852-11ea-83ec-578bbedbe7b6?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-5y%2Fy%2Cto%3Anow))" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
                   </div>
                 </div>
