회원 수 카드 필터 제거 후 커밋

--- a/packus/web/static/css/base.scss
+++ b/packus/web/static/css/base.scss
@@ -4240,6 +4240,16 @@ License - nucleoapp.com/license/
     font-size: 15px;
     font-weight: 600;
 }
+.countCardHeader {
+  height: 45px!important;
+  margin-bottom: -5px;
+  z-index: 20;
+  background-color: #fff!important;
+}
+.countCardBody {
+  height: 207px;
+  margin-top: -40px!important;
+}
 
 
 
