패커스 rfm 클러스터 보고서 추가 html 수정

--- a/packus/web/templates/rfm/cluster.html
+++ b/packus/web/templates/rfm/cluster.html
@@ -738,7 +738,7 @@
                     </div>
                     <div class="row">
                       <div class="col-lg-4 col-md-4 col-sm-4">
-                        <h6>전체회원 거주지역 분포(상위 30%)</h6>
+                        <p><small>전체회원 거주지역 분포(상위 30%)</small></p>
                         <canvas id="myChart_cluster1"></canvas>
                       </div>
                       <div class="col-lg-8 col-md-8 col-sm-8">
@@ -905,8 +905,8 @@
                     </div>
                     <div class="row mb-3">
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light gather-box">
-                          <ul>
+                        <div class="bg-light gather-box px-2">
+                          <ul class="pl-3">
                             <li>전체의 2%</li>
                             <li>약 500일간 거래 중</li>
                             <li>연간 100만원 정도 구매함</li>
@@ -924,16 +924,16 @@
                         </div>
                         <div class="bg-info text-center w-100 round-cnt">
                           <div class="content">
-                            <p class="m-0"><small>1-a</small></p>
-                            <p class="m-0"><small>떠날 준비하는 충성고객</small></p>
-                            <p class="m-0"><small>(mobile 채널)</small></p>
-                            <p class="m-0"><small>115명</small></p>
+                            <p class="m-0"><small class="font-weight-bold">1-a</small></p>
+                            <p class="m-0"><small class="font-weight-bold">떠날 준비하는 충성고객</small></p>
+                            <p class="m-0"><small class="font-weight-bold">(mobile 채널)</small></p>
+                            <p class="m-0"><small class="font-weight-bold">115명</small></p>
                           </div>
                         </div>
                       </div>
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light" style="height: 300px; display: table-cell; vertical-align: middle;">
-                          <ul>
+                        <div class="bg-light gather-box px-2">
+                          <ul class="pl-3">
                             <li>전체의 4%</li>
                             <li>약 518일간 거래 중</li>
                             <li>연간 150만원 정도 구매함</li>
@@ -951,16 +951,16 @@
                         </div>
                         <div class="bg-warning text-center w-100 round-cnt">
                           <div class="content">
-                            <p class="m-0"><small>1-b</small></p>
-                            <p class="m-0"><small>충성고객</small></p>
-                            <p class="m-0"><small>(write 채널)</small></p>
-                            <p class="m-0"><small>231명</small></p>
+                            <p class="m-0"><small class="font-weight-bold">1-b</small></p>
+                            <p class="m-0"><small class="font-weight-bold">충성고객</small></p>
+                            <p class="m-0"><small class="font-weight-bold">(write 채널)</small></p>
+                            <p class="m-0"><small class="font-weight-bold">231명</small></p>
                           </div>
                         </div>
                       </div>
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light" style="height: 300px; display: table-cell; vertical-align: middle;">
-                          <ul>
+                        <div class="bg-light gather-box px-2">
+                          <ul class="pl-3">
                             <li>전체의 7%</li>
                             <li>약 339일간 거래 중</li>
                             <li>연간 56만원 정도 구매함</li>
@@ -979,16 +979,16 @@
                         </div>
                         <div class="bg-danger text-center w-100 round-cnt">
                           <div class="content">
-                            <p class="m-0"><small>1-c</small></p>
-                            <p class="m-0"><small>발길 끊은 충성고객</small></p>
-                            <p class="m-0"><small>(mobile 채널)</small></p>
-                            <p class="m-0"><small>417명</small></p>
+                            <p class="m-0"><small class="font-weight-bold">1-c</small></p>
+                            <p class="m-0"><small class="font-weight-bold">발길 끊은 충성고객</small></p>
+                            <p class="m-0"><small class="font-weight-bold">(mobile 채널)</small></p>
+                            <p class="m-0"><small class="font-weight-bold">417명</small></p>
                           </div>
                         </div>
                       </div>
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light" style="height: 300px; display: table-cell; vertical-align: middle;">
-                          <ul>
+                        <div class="bg-light gather-box px-2">
+                          <ul class="pl-3">
                             <li>전체의 10%</li>
                             <li>약 490일간 거래 중</li>
                             <li>연간 190만원 정도 구매함</li>
@@ -1006,10 +1006,10 @@
                         </div>
                         <div class="bg-success text-center w-100 round-cnt">
                           <div class="content">
-                            <p class="m-0"><small>1-d</small></p>
-                            <p class="m-0"><small>극 충성고객</small></p>
-                            <p class="m-0"><small>(mobile 채널)</small></p>
-                            <p class="m-0"><small>579명</small></p>
+                            <p class="m-0"><small class="font-weight-bold">1-d</small></p>
+                            <p class="m-0"><small class="font-weight-bold">극 충성고객</small></p>
+                            <p class="m-0"><small class="font-weight-bold">(mobile 채널)</small></p>
+                            <p class="m-0"><small class="font-weight-bold">579명</small></p>
                           </div>
                         </div>
                       </div>
@@ -1017,8 +1017,8 @@
 
                     <div class="row mb-3">
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light gather-box">
-                          <ul>
+                        <div class="bg-light gather-box px-2">
+                          <ul class="pl-3">
                             <li>전체의 9%</li>
                             <li>약 447일간 거래 중</li>
                             <li>연간 37만원 정도 구매함</li>
@@ -1036,16 +1036,16 @@
                         </div>
                         <div class="bg-info text-center w-100 round-cnt">
                           <div class="content">
-                            <p class="m-0"><small>2-a</small></p>
-                            <p class="m-0"><small>꾸준한 저텐션 고객</small></p>
-                            <p class="m-0"><small>(mobile 채널)</small></p>
-                            <p class="m-0"><small>528명</small></p>
+                            <p class="m-0"><small class="font-weight-bold">2-a</small></p>
+                            <p class="m-0"><small class="font-weight-bold">꾸준한 저텐션 고객</small></p>
+                            <p class="m-0"><small class="font-weight-bold">(mobile 채널)</small></p>
+                            <p class="m-0"><small class="font-weight-bold">528명</small></p>
                           </div>
                         </div>
                       </div>
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light" style="height: 300px; display: table-cell; vertical-align: middle;">
-                          <ul>
+                        <div class="bg-light gather-box px-2">
+                          <ul class="pl-3">
                             <li>전체의 13%</li>
                             <li>약 196일간 거래 중</li>
                             <li>연간 12만원 정도 구매함</li>
@@ -1063,16 +1063,16 @@
                         </div>
                         <div class="bg-warning text-center w-100 round-cnt">
                           <div class="content">
-                            <p class="m-0"><small>2-b</small></p>
-                            <p class="m-0"><small>발길 끊은 저텐션 고객</small></p>
-                            <p class="m-0"><small>(pc 채널)</small></p>
-                            <p class="m-0"><small>772명</small></p>
+                            <p class="m-0"><small class="font-weight-bold">2-b</small></p>
+                            <p class="m-0"><small class="font-weight-bold">발길 끊은 저텐션 고객</small></p>
+                            <p class="m-0"><small class="font-weight-bold">(pc 채널)</small></p>
+                            <p class="m-0"><small class="font-weight-bold">772명</small></p>
                           </div>
                         </div>
                       </div>
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light" style="height: 300px; display: table-cell; vertical-align: middle;">
-                          <ul>
+                        <div class="bg-light gather-box px-2">
+                          <ul class="pl-3">
                             <li>전체의 3%</li>
                             <li>약 264일간 거래 중</li>
                             <li>연간 17만원 정도 구매함</li>
@@ -1090,16 +1090,16 @@
                         </div>
                         <div class="bg-danger text-center w-100 round-cnt">
                           <div class="content">
-                            <p class="m-0"><small>3-a</small></p>
-                            <p class="m-0"><small>아직 미련 남은 저텐션 고객</small></p>
-                            <p class="m-0"><small>(write) 채널)</small></p>
-                            <p class="m-0"><small>185명</small></p>
+                            <p class="m-0"><small class="font-weight-bold">3-a</small></p>
+                            <p class="m-0"><small class="font-weight-bold">아직 미련 남은 저텐션 고객</small></p>
+                            <p class="m-0"><small class="font-weight-bold">(write) 채널)</small></p>
+                            <p class="m-0"><small class="font-weight-bold">185명</small></p>
                           </div>
                         </div>
                       </div>
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light" style="height: 300px; display: table-cell; vertical-align: middle;">
-                          <ul>
+                        <div class="bg-light gather-box px-2">
+                          <ul class="pl-3">
                             <li>전체의 17%</li>
                             <li>약 49일간 거래 중</li>
                             <li>가입하고 바로 첫 구매</li>
@@ -1116,10 +1116,10 @@
                         </div>
                         <div class="bg-success text-center w-100 round-cnt">
                           <div class="content">
-                            <p class="m-0"><small>3-b</small></p>
-                            <p class="m-0"><small>긴가민가하다 떠나버린 고객</small></p>
-                            <p class="m-0"><small>(pc 채널)</small></p>
-                            <p class="m-0"><small>1007명</small></p>
+                            <p class="m-0"><small class="font-weight-bold">3-b</small></p>
+                            <p class="m-0"><small class="font-weight-bold">긴가민가하다 떠나버린 고객</small></p>
+                            <p class="m-0"><small class="font-weight-bold">(pc 채널)</small></p>
+                            <p class="m-0"><small class="font-weight-bold">1007명</small></p>
                           </div>
                         </div>
                       </div>
@@ -1127,8 +1127,8 @@
 
                     <div class="row mb-3">
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light gather-box">
-                          <ul>
+                        <div class="bg-light gather-box px-2">
+                          <ul class="pl-3">
                             <li>전체의 16%</li>
                             <li>가입하고 바로 1회 구매해 본 후 최근 1년간 구매 이력 없음</li>
                             <li>주로 pc로 구매</li>
@@ -1143,16 +1143,16 @@
                         </div>
                         <div class="bg-info text-center w-100 round-cnt">
                           <div class="content">
-                            <p class="m-0"><small>4-a</small></p>
-                            <p class="m-0"><small>단발성 쇼퍼</small></p>
-                            <p class="m-0"><small>(pc 채널)</small></p>
-                            <p class="m-0"><small>941명</small></p>
+                            <p class="m-0"><small class="font-weight-bold">4-a</small></p>
+                            <p class="m-0"><small class="font-weight-bold">단발성 쇼퍼</small></p>
+                            <p class="m-0"><small class="font-weight-bold">(pc 채널)</small></p>
+                            <p class="m-0"><small class="font-weight-bold">941명</small></p>
                           </div>
                         </div>
                       </div>
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light" style="height: 300px; display: table-cell; vertical-align: middle;">
-                          <ul>
+                        <div class="bg-light gather-box px-2">
+                          <ul class="pl-3">
                             <li>전체의 12%</li>
                             <li>가입하고 바로 1회 구매해 본 후 최근 1년간 구매 이력 없음</li>
                             <li>주로 모바일로 구매</li>
@@ -1167,16 +1167,16 @@
                         </div>
                         <div class="bg-warning text-center w-100 round-cnt">
                           <div class="content">
-                            <p class="m-0"><small>4-b</small></p>
-                            <p class="m-0"><small>단발성 쇼퍼</small></p>
-                            <p class="m-0"><small>(mobile 채널)</small></p>
-                            <p class="m-0"><small>691명</small></p>
+                            <p class="m-0"><small class="font-weight-bold">4-b</small></p>
+                            <p class="m-0"><small class="font-weight-bold">단발성 쇼퍼</small></p>
+                            <p class="m-0"><small class="font-weight-bold">(mobile 채널)</small></p>
+                            <p class="m-0"><small class="font-weight-bold">691명</small></p>
                           </div>
                         </div>
                       </div>
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light" style="height: 300px; display: table-cell; vertical-align: middle;">
-                          <ul>
+                        <div class="bg-light gather-box px-2">
+                          <ul class="pl-3">
                             <li>전체의 3%</li>
                             <li>가입하고 바로 1회, 10만원어치 구매 후 최근 3개월간 구매 이력 없음</li>
                             <li>주로 수기로 구매</li>
@@ -1191,16 +1191,16 @@
                         </div>
                         <div class="bg-danger text-center w-100 round-cnt">
                           <div class="content">
-                            <p class="m-0"><small>4-c</small></p>
-                            <p class="m-0"><small>단발성 쇼퍼</small></p>
-                            <p class="m-0"><small>(write 채널)</small></p>
-                            <p class="m-0"><small>179명</small></p>
+                            <p class="m-0"><small class="font-weight-bold">4-c</small></p>
+                            <p class="m-0"><small class="font-weight-bold">단발성 쇼퍼</small></p>
+                            <p class="m-0"><small class="font-weight-bold">(write 채널)</small></p>
+                            <p class="m-0"><small class="font-weight-bold">179명</small></p>
                           </div>
                         </div>
                       </div>
                       <div class="col-lg-3 col-md-3 col-sm-3">
-                        <div class="bg-light" style="height: 300px; display: table-cell; vertical-align: middle;">
-                          <ul>
+                        <div class="bg-light gather-box px-2">
+                          <ul class="pl-3">
                             <li>전체의 0.1%</li>
                             <li>가입하고 204일 후 시점인 최근 3개월간 1회, 9만원어치 구매</li>
                             <li>주로 모바일로 구매</li>
@@ -1216,9 +1216,9 @@
                         </div>
                         <div class="bg-success text-center w-100 round-cnt">
                           <div class="content">
-                            <p class="m-0"><small>4-d</small></p>
-                            <p class="m-0"><small>잊은 줄 알았는데 다시 오셨군요</small></p>
-                            <p class="m-0"><small>8명</small></p>
+                            <p class="m-0"><small class="font-weight-bold">4-d</small></p>
+                            <p class="m-0"><small class="font-weight-bold">잊은 줄 알았는데 다시 오셨군요</small></p>
+                            <p class="m-0"><small class="font-weight-bold">8명</small></p>
                           </div>
                         </div>
                       </div>
